# active-window-capture

./: Cargo.toml
src/: driver.rs  foreground_watcher.rs  image_viewer.rs  main.rs  stdin_shell.rs  window_capture.rs
